Fix profile menu visibility when sub-navigation is fixed on top.

--- a/docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-subnav.scss
+++ b/docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-subnav.scss
@@ -11,7 +11,7 @@ vs-subnav,
   text-align: center;
   left: 0;
   right: 0;
-  z-index: 999;
+  z-index: 2;
 
 }
 
